# Agent-Langchain

./: .gitignore  README.md  create_fastapi_project.sh  docker-compose.yml
api/: .env.example  Dockerfile  docs_api.md  entrypoint.sh  main.py  pyproject.toml
api/app/: __init__.py
api/app/api/: router.py
api/app/core/: config.py  logger.py  security.py
api/app/core/enum/: enum.py
api/app/database/: __init__.py
api/app/database/models/: base_model.py  booking_model.py  guest_model.py  hotel_model.py  payment_model.py  review_model.py  room_model.py
api/app/database/schemas/: auth_schema.py  booking_schema.py  guest_schema.py  hotel_schema.py  review_schema.py  room_schema.py
api/app/middleware/: http_traffic_logger.py  response_formatter.py
api/app/schema/: base_schema.py
api/app/services/: auth_service.py  booking_service.py  guest_service.py  hotel_service.py  invoice_service.py  payment_service.py  review_service.py  room_service.py
api/app/templates/: invoice_template.html
llm/: .env.example  .gitignore  DS_AGENT_API.md  Dockerfile  entrypoint.sh  llm_flow.md  main.py  pyproject.toml  requirements.txt
llm/app/: __init__.py
llm/app/agents/: code_expert_agent.py
llm/app/api/v1/: router.py
llm/app/api/v2/: __init__.py  router.py
llm/app/core/: config.py  model_selector.py
llm/app/core/enum/: enum.py
llm/app/core/utils/: api_utils.py  api_utils_sync.py  hotel_utils.py
llm/app/middleware/: __init__.py  context_middleware.py  memory_middleware.py  prompt_middleware.py  response_validation_middleware.py  tool_context_middleware.py  tool_error_middleware.py
llm/app/middleware/ds/: __init__.py  ds_code_execution_middleware.py  ds_code_memory_middleware.py  ds_context_middleware.py  ds_json_parser_middleware.py  ds_latex_formatter_middleware.py  ds_memory_middleware.py  ds_memory_trim_middleware.py  ds_prompt_middleware.py  ds_state_init_middleware.py  ds_tool_context_middleware.py  ds_tool_json_fix_middleware.py
llm/app/nodes/: llm_memory_node.py
llm/app/prompts/: ds_prompt.py  prompt_v1.py  prompt_v2.py
llm/app/schema/: booking_schema.py  guest_schema.py  hotel_schema.py  payment_schema.py  review_schema.py  room_schema.py
llm/app/services/: ds_agent_service.py  ds_memory_service.py  hotel_agent_service.py  hotel_agent_service_v2.py  memory_service.py  memory_service_v2.py
llm/app/states/: ds_agent_state.py  hotel_agent_state.py  hotel_agent_state_v2.py
llm/app/tools/: booking_tools.py  guest_tools.py  guest_tools_v2.py  hotel_tools.py  invoice_tools.py  memory_tools.py  payment_tools.py  review_tools.py  room_tools.py
llm/app/tools/ds/: __init__.py  code_execution_pool.py  code_execution_tools.py  code_execution_tools_v2.py  (+12 more)
llm/app/utils/: code_similarity.py
llm/templates/: chat.html
(+75 files in other folders)
