[project]
name = "hotel-agent"
version = "0.1.0"
description = "FastAPI backend for hotel agent system"
requires-python = ">=3.10"

dependencies = [
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.120.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "minio>=7.2.18",
    "passlib>=1.7.4",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "pyjwt>=2.10.1",
    "python-decouple>=3.8",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
    "loguru",
    "py-cord==2.6.1",
    "weasyprint==64.1",
    "qrcode==8.0",
    "python-jose[cryptography]>=3.5.0",
    "bcrypt>=5.0.0",
]
